[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UI/UIInfo.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UI/UI_BaseInfo.gd" type="Script" id=2]
[ext_resource path="res://Scripts/UI/UI_PlayerInfo.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/UI_Player_Strength_Bar.tscn" type="PackedScene" id=4]

[node name="UIInfo" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="WindowContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -159.0
margin_right = 180.0
margin_bottom = 159.0

[node name="BaseInfo" type="PanelContainer" parent="WindowContainer"]
editor/display_folded = true
margin_right = 180.0
margin_bottom = 116.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="WindowContainer/BaseInfo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 173.0
margin_bottom = 109.0

[node name="Savings" type="Label" parent="WindowContainer/BaseInfo/VBoxContainer"]
margin_right = 166.0
margin_bottom = 14.0
text = "Savings: --"

[node name="Income" type="Label" parent="WindowContainer/BaseInfo/VBoxContainer"]
margin_top = 18.0
margin_right = 166.0
margin_bottom = 32.0
text = "Income: --"

[node name="Wages" type="Label" parent="WindowContainer/BaseInfo/VBoxContainer"]
margin_top = 36.0
margin_right = 166.0
margin_bottom = 50.0
text = "Wages: --"

[node name="HSeparator" type="HSeparator" parent="WindowContainer/BaseInfo/VBoxContainer"]
margin_top = 54.0
margin_right = 166.0
margin_bottom = 58.0

[node name="Balance" type="Label" parent="WindowContainer/BaseInfo/VBoxContainer"]
margin_top = 62.0
margin_right = 166.0
margin_bottom = 76.0
text = "Balance: --"

[node name="HSeparator2" type="HSeparator" parent="WindowContainer/BaseInfo/VBoxContainer"]
margin_top = 80.0
margin_right = 166.0
margin_bottom = 84.0

[node name="Money" type="Label" parent="WindowContainer/BaseInfo/VBoxContainer"]
margin_top = 88.0
margin_right = 166.0
margin_bottom = 102.0
text = "Money: --"

[node name="PlayerInfo" type="PanelContainer" parent="WindowContainer"]
margin_top = 120.0
margin_right = 180.0
margin_bottom = 318.0
script = ExtResource( 3 )

[node name="PlayerBars" type="HBoxContainer" parent="WindowContainer/PlayerInfo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 173.0
margin_bottom = 191.0

[node name="Player1" parent="WindowContainer/PlayerInfo/PlayerBars" instance=ExtResource( 4 )]
tint_color = Color( 0.443137, 0.188235, 0, 1 )

[node name="Player2" parent="WindowContainer/PlayerInfo/PlayerBars" instance=ExtResource( 4 )]
margin_left = 34.0
margin_right = 64.0
tint_color = Color( 0.215686, 0.745098, 0, 1 )

[node name="Player3" parent="WindowContainer/PlayerInfo/PlayerBars" instance=ExtResource( 4 )]
margin_left = 68.0
margin_right = 98.0
tint_color = Color( 1, 0.4, 0, 1 )

[node name="Player4" parent="WindowContainer/PlayerInfo/PlayerBars" instance=ExtResource( 4 )]
margin_left = 102.0
margin_right = 132.0
tint_color = Color( 0.898039, 0.843137, 0, 1 )

[node name="Player5" parent="WindowContainer/PlayerInfo/PlayerBars" instance=ExtResource( 4 )]
margin_left = 136.0
margin_right = 166.0
tint_color = Color( 0.517647, 0.517647, 0.517647, 1 )
